--- a/1.html
+++ b/1.html
@@ -7,10 +7,9 @@
 <body>
   <h1>13반<3</h1>
   <nl>
-    <li><a href="https://www.instagram.com/leesunmin_/" TARGET="_BLANK"> 이선민<br><img src="sunmin.png"></a>
-    <li><a href="https://www.instagram.com/hada6_6/" target="_blank">  하다정<br> <img src="hada.png" width="50%"></a>
-    <li><a href="https://www.instagram.com/n_shuri/"target="_blank"> 양새난슬<br> <img src="nshuri.png" width="50%"> </A>
+    <li><a href="https://www.instagram.com/leesunmin_/" TARGET="_BLANK"> 이선민<br><img src="./sunmin.png"></a>
+    <li><a href="https://www.instagram.com/hada6_6/" target="_blank">  하다정<br> <img src="./hada.png" width="50%"></a>
+    <li><a href="https://www.instagram.com/n_shuri/"target="_blank"> 양새난슬<br> <img src="./nshuri.png" width="50%"> </A>
   </nl>
-
   <P> 비록 귀찮아서 언니들 세명밖에 못넣었지만 13반 샤릉하는거알지 <3
 </body>
