--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
 <body>
   <h1>13반<3</h1>
   <nl>
-    <li><a href="https://www.instagram.com/leesunmin_/" TARGET="_BLANK"> 이선민<br><img src="./sunmin.png"></a>
+    <li><a href="https://www.instagram.com/leesunmin_/" TARGET="_BLANK"> 이선민<br><img src="./sunmin.png" width="50%"></a>
     <li><a href="https://www.instagram.com/hada6_6/" target="_blank">  하다정<br> <img src="./hada.png" width="50%"></a>
     <li><a href="https://www.instagram.com/n_shuri/"target="_blank"> 양새난슬<br> <img src="./nshuri.png" width="50%"> </A>
   </nl>
